# b2b-saas-taskboard

./: .gitignore  README.md
.github/workflows/: backend-tests.yml
backend/: pyproject.toml  requirements.txt  start.py
backend/app/: main.py
backend/app/api/: tasks.py  webhooks.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: task.py
backend/app/schemas/: task.py
backend/tests/: conftest.py  test_auth.py  test_database.py  test_tasks.py  test_webhooks.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: KanbanBoard.jsx  Layout.jsx  TaskCard.jsx  TaskColumn.jsx  TaskForm.jsx
frontend/src/pages/: DashboardPage.jsx  HomePage.jsx  PricingPage.jsx  SignInPage.jsx  SignUpPage.jsx
frontend/src/services/: api.js
