[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "clerk-backend-api>=5.0.2",
    "fastapi>=0.135.1",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.11.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "svix>=1.87.0",
    "uvicorn>=0.41.0",
]
